# ncs_samples

./: .gitignore  README.rst
ble_comprehensive/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  README.rst  pm_static.yml  pm_static_nrf52840dk_nrf52840.yml  pm_static_nrf5340dk_nrf5340_cpuapp.yml  pm_static_nrf5340dk_nrf5340_cpuapp_hci_ipc.yml  pm_static_nrf54l15dk_nrf54l15_cpuapp.yml  pm_static_nrf54l15dk_nrf54l15_cpuapp_flpr.yml  prj.conf  prj_flpr.conf  program.bat  program_52.bat  program_53.bat  program_flpr.bat  sample.yaml  sysbuild.conf  sysbuild_hci_ipc.conf
ble_comprehensive/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_flpr.conf  nrf54l15dk_nrf54l15_cpuapp_flpr.overlay  nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp_nrf7001.conf  nrf7002dk_nrf7001_nrf5340_cpuapp.conf
ble_comprehensive/child_image/: hci_rpmsg.conf  mcuboot.conf
ble_comprehensive/child_image/mcuboot/: prj.conf
ble_comprehensive/child_image/mcuboot/boards/: nrf52840dk_nrf52840.conf  nrf5340dk_nrf5340_cpuapp.conf  nrf7002dk_nrf7001_nrf5340_cpuapp.conf
ble_comprehensive/dts/bindings/: i2c-user-define.yaml  spi-user-define.yaml
ble_comprehensive/sdk_change/dtm_in_app_ncs_v3.3.0/: mpsl_init.c
ble_comprehensive/sdk_change/ncs_v1.5.x/ncs_samples/comprehensive/child_image/: hci_rpmsg.conf
ble_comprehensive/sdk_change/ncs_v1.5.x/nrf/subsys/nrf_dfu/inc/: crc32.h  nrf_dfu.h
ble_comprehensive/sdk_change/ncs_v1.7.x/ncs_samples/comprehensive/: prj.conf
ble_comprehensive/sdk_change/ncs_v1.7.x/ncs_samples/comprehensive/child_image/: mcuboot.conf
ble_comprehensive/sdk_change/ncs_v1.7.x/nrf/subsys/: CMakeLists.txt
ble_comprehensive/sdk_change/ncs_v1.9.x/nrf/subsys/: Kconfig
ble_comprehensive/sdk_change/ncs_v2.2.x/nrf/modules/mcuboot/hooks/: nrf53_hooks.c
ble_comprehensive/sdk_change/ncs_v2.5.x/nrf/samples/common/mcumgr_bt_ota_dfu/: Kconfig
ble_comprehensive/sdk_change/ncs_v2.7.x/nrf/samples/common/mcumgr_bt_ota_dfu/: Kconfig
ble_comprehensive/sdk_change/ncs_v3.0.0_dtm_in_app/: mpsl_init.c
ble_comprehensive/sdk_change/ncs_v3.3.x/nrf/subsys/pcd/: CMakeLists.txt
ble_comprehensive/sdk_change/ncs_v3.3.x_nrf5340_dfu/bootloader/mcuboot/boot/zephyr/include/sysflash/: sysflash.h
ble_comprehensive/sdk_change/ncs_v3.3.x_nrf5340_dfu/nrf/cmake/sysbuild/: sign.cmake
ble_comprehensive/sdk_change/ncs_v3.3.x_nrf5340_dfu/nrf/modules/mcuboot/: flash_sim.overlay
ble_comprehensive/sdk_change/ncs_v3.4.x_dtm_in_app/nrf/subsys/mpsl/init/: mpsl_init.c
ble_comprehensive/src/: adc_thread.c  flash_thread.c  i2c_thread.c  iic_thread.c  io_int_thread.c  main.c  nvs_thread.c  settings_thread.c  spi_thread.c  uart_thread.c
ble_comprehensive/src/dtm/: CMakeLists.txt  dtm.c  dtm_main.c
ble_comprehensive/src/dtm/transport/: dtm_uart_twowire.c  dtm_uart_wait.c  dtm_uart_wait.h
ble_comprehensive/sysbuild/: b0n.overlay  ipc_radio.conf  ipc_radio.overlay
ble_comprehensive/sysbuild/mcuboot/: app.overlay  prj.conf
ble_comprehensive/sysbuild/mcuboot/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp_nrf7001.conf  nrf7002dk_nrf5340_cpuapp_nrf7001.overlay
ble_ipc/: ipc_cmd_ids.h
ble_ipc/netcore_ipc/: CMakeLists.txt  Kconfig  README.rst  prj.conf  program_53.bat  sample.yaml
ble_ipc/netcore_ipc/child_image/: b0n.conf
ble_ipc/netcore_ipc/src/: ipc_cmd_ids.h  ipc_lib.c  ipc_net_api.c  ipc_net_api.h  ipc_net_smp_bt.c  ipc_net_smp_bt.h  main.c
comprehensive/: Kconfig  README.rst  prj.conf
comprehensive_rpc/: CMakeLists.txt  Kconfig  README.rst  pm_static.yml  prj.conf
external_interrupt/: README.rst  prj.conf  program.bat  program_53.bat  sample.yaml
hello_world/: CMakeLists.txt  prj.conf  spm.conf  zephyr_modules.txt  zephyr_settings.txt
hello_world/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_2.conf
hello_world/child_image/: tfm.conf
hello_world/src/: blinky.c  main.c
i2c_master/: CMakeLists.txt  Kconfig  README.rst  prj.conf  program_52.bat  sample.yaml
netcore_ble/: Kconfig  README.rst  prj.conf
nrf53_ble/: common_ids.h
nrf53_ble/appcore/: CMakeLists.txt  Kconfig  README.rst  nrf5340dk_nrf5340_cpuapp.overlay  pm_static.yml  prj.conf  program.bat
nrf53_ble/appcore/src/: adc_thread.c  flash_thread.c  main.c  rpc_app_nus.c  rpc_app_nus.h  rpc_app_smp.c  rpc_app_smp.h  rpc_thread1.c  rpc_thread2.c  spi_thread.c  uart_thread.c
nrf_dfu/: README.rst
nrf_dfu/rpc_exFlash/: CMakeLists.txt  Kconfig  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
nrf_dfu/rpc_exFlash/update_zip/: app_signed.hex  net_core_app_signed.hex  zip_generate.bat
nrfx_api/: README.rst  prj.conf
nrfx_spi_rtc/: README.rst  prj.conf  program.bat
pwm_adc_gpio/: CMakeLists.txt  prj.conf
qspi_xip_dma/: CMakeLists.txt  README.rst  custom_program.bat  gdqspi.ini  linker_arm_nocopy.ld  nordic_program.bat  pm_static.yml  prj.conf  sample.yaml  update.bat
qspi_xip_dma/boards/: nrf5340dk_nrf5340_cpuapp.overlay
qspi_xip_dma/child_image/: b0n.conf  hci_rpmsg.conf  mcuboot.conf
qspi_xip_dma/child_image/mcuboot/boards/: nrf7002dk_nrf5340_cpuapp.overlay
qspi_xip_dma/sdk_change/ncs_v2.3.x/nrf/modules/mcuboot/hooks/: nrf53_hooks.c
qspi_xip_dma/sdk_change/ncs_v2.3.x/zephyr/cmake/modules/: extensions.cmake
qspi_xip_dma/sdk_change/ncs_v2.4.x/zephyr/subsys/pm/: pm.c
qspi_xip_dma/src/: adc_thread.c  const_var.c  ext_mem_init.c  ext_mem_init_custom.bak  ext_mem_init_nordic.bak  main.c
slm_comprehensive/: CMakeLists.txt  Kconfig  pm_static.yml  prj.conf  sysbuild.conf
spi_master/: README.rst  prj.conf  program_53.bat  sample.yaml
spim/: README.rst
uart_highspeed/: README.rst  (+4 more)
(+591 files in other folders)
